--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
+    "dev": "npm start",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
   },
