--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "zoffyzhang.github.io",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "node scripts/start.js",
+    "dev": "npm start",
+    "build": "node scripts/build.js",
+    "test": "node scripts/test.js --env=jsdom",
+    "deploy": "git add . && git commit -m deploy && git checkout master && git merge develop && npm run build && git push && git checkout develop"
+  },
   "dependencies": {
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
@@ -43,13 +50,6 @@
     "webpack-dev-server": "2.11.3",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
-  },
-  "scripts": {
-    "start": "node scripts/start.js",
-    "dev": "npm start",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom",
-    "deploy": "npm run build && git add . && git commit -m deploy && git checkout master && git merge develop && git push && git checkout develop"
   },
   "jest": {
     "collectCoverageFrom": [
