--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "react-dom": "^16.4.2",
         "react-router-dom": "^4.3.1",
         "resolve": "1.6.0",
+        "signale": "^1.2.1",
         "style-loader": "0.19.0",
         "sw-precache-webpack-plugin": "0.11.4",
         "url-loader": "0.6.2",
